--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fix": "standard --fix"
+    "fix": "standard --fix",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
