--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "standard"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trickaugusto/clean-node-api.git"
