--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "standard": "^17.1.0"
+  },
+  "dependencies": {
+    "mongoose": "^8.0.1"
   }
 }
