--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "fix": "standard --fix",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:ci"
+    }
+  },
   "standard": {
     "env": ["jest"]
   },
