--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "husky install"
   },
   "standard": {
-    "env": ["jest"]
+    "env": [
+      "jest"
+    ]
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,7 @@
   },
   "homepage": "https://github.com/trickaugusto/clean-node-api#readme",
   "devDependencies": {
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "standard": "^17.1.0"
