--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --silent --colors --noStackTrace --passWithNoTests",
-    "test:unit": "npm test -- --watch jest-unit-config-js",
-    "test:integration": "npm test -- --watch jest-integrationconfig-js",
+    "test:unit": "npm test -- --watch jest-unit-config.js",
+    "test:integration": "npm test -- --watch jest-integrationconfig.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-
     "fix": "standard --fix",
     "prepare": "husky install"
   },
@@ -35,6 +34,7 @@
     "standard": "^17.1.0"
   },
   "dependencies": {
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "validator": "^13.11.0"
   }
 }
